--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 version: "3.7"
 
 services:
-  api:
-    image: be_api
+  fullstack-be:
+    image: fullstack-be
     restart: always
     ports:
       - "7000:7000"
